--- a/leveleditor/leveleditorwindow.ui
+++ b/leveleditor/leveleditorwindow.ui
@@ -30,10 +30,10 @@
     <item>
      <widget class="QScrollArea" name="levelViewArea">
       <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
+       <enum>QFrame::Shape::StyledPanel</enum>
       </property>
       <property name="frameShadow">
-       <enum>QFrame::Sunken</enum>
+       <enum>QFrame::Shadow::Sunken</enum>
       </property>
       <property name="lineWidth">
        <number>1</number>
@@ -74,8 +74,9 @@
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
-     <string>View</string>
+     <string>&amp;View</string>
     </property>
+    <addaction name="actionToggleLayer0"/>
     <addaction name="actionToggleLayer1"/>
     <addaction name="actionToggleLayer2"/>
     <addaction name="actionToggleSprites"/>
@@ -164,6 +165,7 @@
    <addaction name="actionRenderControllers"/>
    <addaction name="actionRenderCameraLimits"/>
    <addaction name="separator"/>
+   <addaction name="actionToggleLayer0"/>
    <addaction name="actionToggleLayer1"/>
    <addaction name="actionToggleLayer2"/>
    <addaction name="actionToggleSprites"/>
@@ -173,6 +175,7 @@
    <addaction name="separator"/>
    <addaction name="actionAddArea"/>
    <addaction name="actionDeleteCurrentArea"/>
+   <addaction name="separator"/>
   </widget>
   <action name="actionToggleLayer1">
    <property name="checkable">
@@ -253,7 +256,7 @@
   </action>
   <action name="actionSave">
    <property name="text">
-    <string>Save</string>
+    <string>&amp;Save</string>
    </property>
    <property name="toolTip">
     <string>Save</string>
@@ -264,7 +267,7 @@
   </action>
   <action name="actionPaste">
    <property name="text">
-    <string>Paste</string>
+    <string>&amp;Paste</string>
    </property>
    <property name="toolTip">
     <string>Paste</string>
@@ -275,7 +278,7 @@
   </action>
   <action name="actionCut">
    <property name="text">
-    <string>Cut</string>
+    <string>&amp;Cut</string>
    </property>
    <property name="toolTip">
     <string>Cut</string>
@@ -286,7 +289,7 @@
   </action>
   <action name="actionCopy">
    <property name="text">
-    <string>Copy</string>
+    <string>C&amp;opy</string>
    </property>
    <property name="toolTip">
     <string>Copy</string>
@@ -297,7 +300,7 @@
   </action>
   <action name="actionDelete">
    <property name="text">
-    <string>Delete</string>
+    <string>&amp;Delete</string>
    </property>
    <property name="toolTip">
     <string>Delete</string>
@@ -358,7 +361,7 @@
   </action>
   <action name="actionRaise">
    <property name="text">
-    <string>Raise to Top</string>
+    <string>&amp;Raise to Top</string>
    </property>
    <property name="toolTip">
     <string>Raise to Top</string>
@@ -369,7 +372,7 @@
   </action>
   <action name="actionLower">
    <property name="text">
-    <string>Lower to Bottom</string>
+    <string>&amp;Lower to Bottom</string>
    </property>
    <property name="toolTip">
     <string>Lower to Bottom</string>
@@ -380,7 +383,7 @@
   </action>
   <action name="actionRaiseLayer">
    <property name="text">
-    <string>Raise Layer</string>
+    <string>Ra&amp;ise Layer</string>
    </property>
    <property name="toolTip">
     <string>Raise Layer</string>
@@ -391,7 +394,7 @@
   </action>
   <action name="actionLowerLayer">
    <property name="text">
-    <string>Lower Layer</string>
+    <string>Lo&amp;wer Layer</string>
    </property>
    <property name="toolTip">
     <string>Lower Layer</string>
@@ -416,7 +419,7 @@
   </action>
   <action name="actionSelectAll">
    <property name="text">
-    <string>Select All</string>
+    <string>&amp;Select All</string>
    </property>
    <property name="toolTip">
     <string>Select All</string>
@@ -524,6 +527,17 @@
     <string>Toggle 2D Tiles</string>
    </property>
   </action>
+  <action name="actionToggleLayer0">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Toggle Layer 0</string>
+   </property>
+   <property name="toolTip">
+    <string>Toggle Layer 0</string>
+   </property>
+  </action>
   <action name="actionToggleEntrances">
    <property name="checkable">
     <bool>true</bool>
@@ -548,12 +562,12 @@
   </action>
   <action name="actionShowPreferences">
    <property name="text">
-    <string>Preferences</string>
+    <string>&amp;Preferences</string>
    </property>
   </action>
   <action name="actionDeselect">
    <property name="text">
-    <string>Deselect</string>
+    <string>D&amp;eselect</string>
    </property>
    <property name="toolTip">
     <string>Deselect</string>
@@ -573,7 +587,7 @@
     <string>Render Controller Indicators</string>
    </property>
    <property name="menuRole">
-    <enum>QAction::TextHeuristicRole</enum>
+    <enum>QAction::MenuRole::TextHeuristicRole</enum>
    </property>
   </action>
  </widget>
